--- a/EmployeeAPI/Properties/launchSettings.json
+++ b/EmployeeAPI/Properties/launchSettings.json
@@ -12,8 +12,8 @@
     "EmployeeAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
-      // "launchUrl": "swagger",
+      "launchBrowser": true,
+       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
