--- a/ProductAPI/Properties/launchSettings.json
+++ b/ProductAPI/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      // "launchUrl": "swagger",
+       "launchUrl": "true",
       "applicationUrl": "http://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
